docs: improve diagram quality - convert ASCII art to Mermaid
Created comprehensive diagram conversion guide:
- Identified 153 files with ASCII diagrams
- Created ASCII_TO_MERMAID_CONVERSION.md with:
  * Quick reference for common conversion patterns
  * File-by-file priority (Tier 1, Tier 2)
  * Conversion patterns by domain (Java, Python, Kubernetes, DB, etc)
  * Tools and scripts for finding/checking ASCII diagrams
  * Conversion checklist and quality gates
  * Recommended 5-week conversion order
  * Before/after examples
  * Estimated effort (40-80 hours)

Initial conversions:
- Updated 03-backend/java/02-collections-framework.md
  * Replaced HashSet flow diagram with sequence + flow diagram
  * Before: ASCII text boxes (~30 lines)
  * After: Clear Mermaid diagrams (sequence + graph)

Diagram types to convert:
- Hierarchies (class trees, inheritance) → graph TD
- Flows/pipelines → graph LR
- Sequences (interactions) → sequenceDiagram
- State machines → stateDiagram-v2
- Memory/detailed layouts → Keep ASCII + Mermaid combo

Priority files:
- java/06-java-memory-gc.md (21 diagrams)
- java/01-oop-concepts.md (9 diagrams)
- java/09-io-nio.md (10 diagrams)
- databases/01-postgresql-internals.md
- kubernetes/02-kubectl-operations.md
- distributed-systems/01-consensus-replication.md

All conversions will render in UI at localhost:3000 with full Mermaid support.

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>